crates/test-files/fixtures/compile_errors/ctx_builtins_param_incorrect_type.fe
contract Barn {
    pub fn cow() {}
}

contract Foo {
    pub fn bar(ctx: Context) {
        let existing_barn: Barn = Barn("hello world", address(0))
        let created_barn: Barn = Barn.create(address(26), 0)
    }
}
